2005-08-17  Tor Lillqvist  <tml@novell.com>

	* plug-ins/winsnap/Makefile.am (LDADD): Use $(WINDRES) to handle
	cross-compilation.

	* plug-ins/winsnap/winsnap.rc: Refer to the .ico files in
	lowercase, in case cross-compiling.

2005-08-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/fp.c: merged fixes for bug #160032 and bug
	#141032 from HEAD branch.

2005-08-15  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/rcm/rcm_callback.c
	* plug-ins/rcm/rcm_dialog.c
	* plug-ins/rcm/rcm_misc.[ch]: redraw the previews if their size
	changes. Fixes bug #172284.

2005-08-13  Manish Singh  <yosh@gimp.org>

	* app/core/gimpimage-preview.c (gimp_image_get_new_preview): if the
	offsets of the layer are such that they are just on the border of
	the image, detect that and bail instead of trying to make a
	sub-preview with a 0 dimension. Fixes bug #312144.

2005-08-13  Manish Singh  <yosh@gimp.org>

	Backported mmx/sse CFLAGS automake gymnastics from HEAD:

	* acinclude.m4: new macro: GIMP_DETECT_CFLAGS; used to detect which
	of a set of compiler options a compiler supports.

	* configure.in: use the above for -fno-strict-aliasing flag. Also,
	use it to detect the presence of -mmmx and -msse, since those are
	needed to compile even MMX/SSE assembly with gcc 4.0. Define
	MMX/SSE_EXTRA_CFLAGS.

	* app/composite/Makefile.am: compile each of the composite flavors
	into their own library, so we can use automake's per-target CFLAGS.
	Use MMX/SSE_EXTRA_CFLAGS in the appropriate places. Build
	libappcomposite.a out of the resulting objects.

	* app/composite/gimp-composite-3dnow.c
	* app/composite/gimp-composite-altivec.c
	* app/composite/gimp-composite-mmx.c
	* app/composite/gimp-composite-sse.c
	* app/composite/gimp-composite-sse2.c
	* app/composite/gimp-composite-vis.c
	* app/composite/make-installer.py: move the _init functions into
	the installers, so only actually mmx/sse code gets compiled
	under the appropriate CFLAGS.
